[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sms-client"
version = "0.1.0"
description = "CLI клиент к сервису отправки СМС-сообщений"
authors = [{ name = "Garckusha Vladimir" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tomli>=2.0.1; python_version < '3.11'"
]

[project.scripts]
sms-client = "sms_client.cli:main"

[project.optional-dependencies]
dev = [
    "types-tomli>=3.0; python_version < '3.11'"
]